Cap Test, CSS: Panel no longer overlaps

--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -1,42 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.canvas-container {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.canvas-container.sidebar {
+  margin-right: 300px; /* Width of the side panel */
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  
+canvas {
+  display: block;
 }
 
-/*
-#mainCanvas
-{
-    display: block;
-    margin: 0 auto;
-}
-*/
-
-.CanvasBackground {
+.canvas-background {
   background: url("/map.png") center center/contain no-repeat;
   position: absolute;
   top: 0;
@@ -44,13 +24,6 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1; /* Place the background behind the canvas */
-}
-
-.centered-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
 }
 
 .side-panel {
